--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1><b>iamhunnas.xyz </b></h1>
     </div>
     <div class="top-container">
-        <img class="top-pic" src="/img/parachute.jpg" alt="parachute">
+        <img class="top-pic" src="https://github.com/hunnas47/Personal-web/blob/main/img/parachute.jpg" alt="parachute">
         <h1>Hadi Hunnas</h1> 
         <h3>minimalist personal webpage.</h3>
         <p>Hello world👋</p>
