--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>I am Hunnas</title>
+    <title>I am ||unnas</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>  
@@ -11,7 +12,7 @@
         <h1><b>iamhunnas.xyz </b></h1>
     </div>
     <div class="top-container">
-        <img class="top-pic" src="https://w.wallhaven.cc/full/l3/wallhaven-l3zmwy.jpg" alt="parachute">
+        <img class="top-pic" src="img/cyborg.png" alt="cyborg">
         <h1>Hadi Hunnas</h1> 
         <h3>minimalist personal webpage.</h3>
         <p>Hello world👋</p>
