--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1><b>iamhunnas.xyz </b></h1>
     </div>
     <div class="top-container">
-        <img class="top-pic" src="img/cyborg.png" alt="cyborg">
+        <img class="top-pic" src="img/cyberkid.png" alt="cyborg">
         <h1>Hadi Hunnas</h1> 
         <h3>minimalist personal webpage.</h3>
         <p>Hello world👋</p>
