Add new lines and style UI
- feat:- hover effect to image
- style:- give round shape to image, Add good meaningful headings, give prop    er style to links.
- refactor:- wrap <a> links into <ul>

--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
     />
   </head>
   <body>
-    <div class="main">
+    <div class="header">
       <h1><b>iamhunnas.xyz </b></h1>
     </div>
     <div class="top-container">
       <img class="top-pic" src="img/cyberkid.png" alt="cyborg" />
       <h1>Hadi Hunnas</h1>
-      <h3>minimalist personal webpage.</h3>
-      <p>Hello world👋</p>
+      <h3 title="Limitless">Indefinita.</h3>
+      <p>Front-End Dev | Technophile | GNU/Linux Lover</p>
     </div>
 
-    <div class="middle-container">
-      <a href="https://t.me/iamhunnas" target="_blank">Telegram</a>
-      <a href="mailto:coopmini57@gmail.com" target="_blank">Email</a>
-      <a href="https://github.com/hunnas47/" target="_blank">Github</a>
+    <div class="links">
+      <ul>
+       <li> <a href="https://t.me/iamhunnas" target="_blank">Telegram</a>
+        <a href="mailto:coopmini57@gmail.com" target="_blank">Email</a></li>
+        <li><a href="https://github.com/hunnas47/" target="_blank">Github</a></li>
+      </ul>
+     
     </div>
   </body>
 </html>
